--- a/sejarah.html
+++ b/sejarah.html
@@ -15,6 +15,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="IMG/LOGO.png" alt="LOGO DISINI" width="50" height="50">
+                 <span class="fw-bold">SMKN 4 Tasikmalaya</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -23,7 +24,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Beranda</a>
                     </li>
@@ -126,6 +127,15 @@
                     </div>
                 </div>
             </div>
+            <div class="text-center text-black">
+                    <hr>
+                    <footer class="copyright">
+                        &copy; 2025. SMKN 4 TASIKMALAYA. 
+                        <br>
+                       All rights reserved.
+                    </footer>
+                    <hr>
+                </div>
         </div>
     </div>
 
