--- a/visi&misi.html
+++ b/visi&misi.html
@@ -12,16 +12,18 @@
     <!-- NAV -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="">
-                <img src="IMG/LOGO.png" alt="LOGO DISINI" width="50" height="50" />
+            <a class="navbar-brand d-flex align-items-center" href="">
+                <img src="IMG/LOGO.png" alt="LOGO DISINI" width="50" height="50" class="me-2" />
+                <span class="fw-bold">SMKN 4 Tasikmalaya</span>
             </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Beranda</a>
                     </li>
@@ -129,6 +131,15 @@
                         <P><a href="">Disdik Jabar</a></P>
                     </div>
                 </div>
+            </div>
+            <div class="text-center text-black">
+                <hr>
+                <footer class="copyright">
+                    &copy; 2025. SMKN 4 TASIKMALAYA.
+                    <br>
+                    All rights reserved.
+                </footer>
+                <hr>
             </div>
         </div>
     </div>
